src/templating/snapshots/yolk__templating__parser__test__newline_in_inline.snap
---
source: src/templating/parser.rs
expression: "parse_document(\"foo /* {< test\\ntest >} */\")"
---
Ok(
    [
        Inline {
            line: TaggedLine {
                left: "foo /* ",
                tag: "{< test\ntest >}",
                right: " */",
                full_line: [0..25]"foo /* {< test\ntest >} */",
            },
            expr: Transform(
                [10..20]"test\ntest ",
            ),
        },
    ],
)
