src/templating/snapshots/yolk__templating__parser__test__newlines_in_multiline.snap
---
source: src/templating/parser.rs
expression: "parse_document(\"foo \\n/* \\n{#\\ntest\\ntest\\n#} */\\nbar\")"
---
Ok(
    [
        Plain(
            [0..9]"foo \n/* \n",
        ),
        NextLine {
            tagged_line: TaggedLine {
                left: "",
                tag: "{#\ntest\ntest\n#}",
                right: " */\n",
                full_line: [9..28]"{#\ntest\ntest\n#} */\n",
            },
            expr: Transform(
                [12..22]"test\ntest\n",
            ),
            next_line: [28..31]"bar",
            full_span: [9..31]"{#\ntest\ntest\n#} */\nbar",
        },
    ],
)
