src/templating/snapshots/yolk__templating__parser__test__nextline_tag.snap
---
source: src/templating/parser.rs
expression: "p_nextline_element(&mut new_input(\"/* {# x #} */\\nfoo\"))?"
---
NextLine {
    tagged_line: TaggedLine {
        left: "/* ",
        tag: "{# x #}",
        right: " */\n",
        full_line: [0..14]"/* {# x #} */\n",
    },
    expr: Transform(
        [6..8]"x ",
    ),
    next_line: [14..17]"foo",
    full_span: [0..17]"/* {# x #} */\nfoo",
}
