src/templating/snapshots/yolk__templating__parser__test__nextline_tag_document.snap
---
source: src/templating/parser.rs
expression: "parse_document(indoc::indoc!\n{r#\"\n            # {# replace_re(`'.*'`, `'{data.value}'`) #}\n            value = 'foo'\n        \"#})"
---
Ok(
    [
        NextLine {
            tagged_line: TaggedLine {
                left: "# ",
                tag: "{# replace_re(`'.*'`, `'{data.value}'`) #}",
                right: "\n",
                full_line: [0..45]"# {# replace_re(`'.*'`, `'{data.value}'`) #}\n",
            },
            expr: Transform(
                [5..42]"replace_re(`'.*'`, `'{data.value}'`) ",
            ),
            next_line: [45..58]"value = 'foo'",
            full_span: [0..58]"# {# replace_re(`'.*'`, `'{data.value}'`) #}\nvalue = 'foo'",
        },
        Plain(
            [58..59]"\n",
        ),
    ],
)
